--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -1,92 +1,212 @@
-body { 
-    margin:0;
-    padding:0;
-    font-family:helvetica, sans-serif; 
+* {
+    box-sizing: border-box;
 }
 
-a { 
-    color:#00abff;
-    text-decoration:none; 
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    background: white;
 }
 
-h1 { 
-    font-weight:normal;
-    border-bottom:1px solid #bbb;
-    padding:0 0 10px 0;
-}
+  /*body:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+  }*/
 
-h2 {
-    font-weight:normal;
-    margin:30px 0 0;
-}
-
-#content { 
+.content { 
     float:left;
     width:60%;
     padding:0 0 0 30px; 
 }
-
-#sidebar { 
-    float:right;
-    width:30%;
-    padding:10px;
-    background:#efefef; 
-    height:100%;
+/* Header/Blog Title */
+.header {
+    padding: 30px;
+    text-align: left;
+    background: #42445a   ;
+    color: white;
+    margin: 0;
 }
 
-p.date { 
-    color:#ccc;
-    font-family: georgia, serif;
+.header h1 {
+    font-size: 30px;
+}
+
+/* Style the top navigation bar */
+.topnav {
+    padding-left: 30px;
+    overflow: visible;
+    background-color: #8cacd0;
     font-size: 12px;
-    font-style: italic; 
+    font-family: Arial, Helvetica, sans-serif;
+    word-spacing: 1px;
 }
 
-/* pagination */
+.topnav ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+/* Style the topnav links */
+.topnav a {
+    padding-left: 0px;
+    float: center;
+    display: block;
+    color: #f2f2f2; ;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.topnav > li {
+    display: inline-block;
+    position: relative;
+}
+
+.topnav > li > a {
+    position: relative;
+    padding: 10px 15px;
+    font-family: Arial, Helvetica, sans-serif , cursive;
+    font-size: 16px;
+    line-height: 1;
+    letter-spacing: 0px;
+}
+
+.topnav > li > a:before {
+    content: "";
+    font-size: 12px;
+    position: absolute;
+    z-index: auto;
+    left: 50%;
+    top: 100%;
+    width: 10px;
+    height: 10px;
+    background: #42445a;
+    border-radius: 0;
+    transform: translate(-50%, 20px);
+    opacity: 0;
+    transition: 0;
+    letter-spacing: 0px;
+}
+
+.topnav li:hover a:before {
+    transform: translate(-50%, 1%);
+    opacity: 0.5;
+}
+
+.submenu {
+    font-size: 12px;
+    position: absolute;
+    z-index: 4;
+    left: 50%;
+    top: 100%;
+    width: 100%;
+    letter-spacing: 0px;
+    margin-top: 5px;
+    background: #42445a;
+    border-radius: 1px;
+    box-sizing: border-box;
+    box-shadow: 10 15 30px hsla(264.3, 40.1%, 38.6%, 0.6);
+    visibility: hidden;
+    opacity: 0;
+    transform: translate(-50%, 20px);
+    transition: 0;
+}
+
+.topnav > li:hover .submenu {
+    visibility: visible;
+    text-align: center;
+    opacity: 1;
+    transform: translate(-50%, 0);
+}
+
+.submenu a {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    text-align: center;
+    letter-spacing: 0px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+    transition: 0;
+}
+
+.submenu a:hover {background: #e8e8e8;}
+/* Change color on hover */
+.topnav a:hover {
+    background-color: #ddeaee;
+    color: black;
+}
+
 .pagination { 
     margin:40px 0; 
     font-weight:bold;
 }
-
-/* forms */
-label { 
-    float:left;
-    clear:both;
-    color:#333;
-    margin-bottom:4px; 
-}
-input, textarea { 
-    clear:both;
-    float:left;
-    margin:0 0 10px;
-    background:#ededed;
-    border:0;
-    padding:6px 10px;
-    font-size:12px;
-}
-input[type=submit] {
-    font-weight:bold;
-    background:#00abff;
-    color:#fff;
-    padding:10px 20px;
-    font-size:14px;
-    text-transform:uppercase; 
-}
-.errorlist { 
-    color:#cc0033;
-    float:left;
-    clear:both;
-    padding-left:10px; 
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {  
+    padding-left: 150px; 
+    float: left;
+    width: 75%;
 }
 
-/* comments */
-.comment {
-    padding:10px;
+/* Right column */
+.rightcolumn {
+    padding-right: 100px;
+    float: left;
+    width: 25%;
+    background-color: hsl(0, 0%, 100%);
+    padding-left: 5px;
+    padding-top: 0px;
 }
-.comment:nth-child(even) {
-    background:#efefef;
+
+/* Fake image */
+.fakeimg {
+    background-color: #ffffff;
+    width: 100%;
+    padding: 20px;
 }
-.comment .info {
-    font-weight:bold;
-    font-size:12px;
-    color:#666;
+
+/* Add a card effect for articles */
+.card {
+    background-color: white;
+    padding: 20px;
+    margin-top: 5px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Footer */
+.footer {
+    padding: 200px;
+    text-align: center;
+    background: hsl(0, 0%, 100%);
+    margin-top: 20px;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {   
+        width: 100%;
+        padding: 0;
+    }
+}
+
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+    .topnav a {
+        float: none;
+        width: 100%;
+    }
 }
