--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -1,11 +1,10 @@
-{% extends "blog/base.html" %} 
- 
-{% block title %}{{ post.title }}{% endblock %} 
- 
-{% block content %} 
-  <h1>{{ post.title }}</h1> 
-  <p class ="date"> 
-    Published {{ post.publish }} by {{ post.author }}
-  </p> 
-  {{ post.body|linebreaks }} 
+{% extends "blog/base.html" %}
+
+{% block title %}Share a post{% endblock %}
+
+{% block content %}
+    <h1>{{ post.title }}</h1>
+    <p class="date"> Опубликовано {{ post.publish }} {{ post.author }}</p>
+    {{ post.body|linebreaks }}
+    <p><a href="{% url "blog:post_share" post.id %}">Поделиться</a></p>
 {% endblock %}
