--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -64,9 +64,24 @@
     </div>
   </div>
     
-  <div id='footer'>
-    <h2> Все права очень защищены (с) </h2>
-  </div>    
+  <footer id='nav-footer' class='class-footer>
+    <div class='center'>
+      <a href="/ru/" class="nav-footer-logo">Веб-документация MDN</a>
+       <div class="footer-group footer-group-mdn">
+         <h2 class='footer-title'>MDN</h2>
+         <ul class='footer-list'>
+           <li>
+             <a href='https://developer.mozilla.org/ru/docs/Learn'>Изучение Веб-разработки </a>
+           </li>                                                    
+           <li class='footer-social'>
+             <a href='https://twitter.com/mozdevnet'> 
+           </li>
+           <li class='footer-social'> 
+             <a href='https://github.com/mdn/'> </a>
+           </li> 
+           </ul> 
+       </div>                                         
+    </div>    
 
 </body>
 </html>
